can get metadata re: an Item from VOyager

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -23,7 +23,9 @@
           <td><%= ti %></td>
         <% end %>
         <td><%= item.sort_title %></td>
-        <td><%= item.creator %></td>
+        <%= item.creator.each do |cr| %>
+          <td><%= cr %></td>
+        <% end %>
         <td><%= item.contributor %></td>
         <td><%= item.date_created %></td>
         <td><%= link_to 'Show', item %></td>
