--- a/app/views/texts/index.html.erb
+++ b/app/views/texts/index.html.erb
@@ -3,23 +3,24 @@
 <table>
   <thead>
     <tr>
-      <th>Description</th>
-      <th>Subject</th>
-      <th>Language</th>
-      <th>Toc</th>
-      <th></th>
-      <th></th>
-      <th></th>
+      <th>Title</th>
+      <th>Date Created</th>
+      <th>Date Uploaded</th>
+      <th>Last Modified</th>
+      <th/>
+      <th/>
+      <th/>
     </tr>
   </thead>
 
   <tbody>
     <% @texts.each do |text| %>
       <tr>
-        <td><%= text.description %></td>
-        <td><%= text.subject %></td>
-        <td><%= text.language %></td>
-        <td><%= text.toc %></td>
+        <td><%= text.title.join(' = ') %></td>
+        <td><%= text.date_created %></td>
+        <td><%= text.date_uploaded %></td>
+        <td><%= text.date_modified.last %></td>
+
         <td><%= link_to 'Show', text %></td>
         <td><%= link_to 'Edit', edit_text_path(text) %></td>
         <td><%= link_to 'Destroy', text, method: :delete, data: { confirm: 'Are you sure?' } %></td>
