--- a/app/views/texts/_form.html.erb
+++ b/app/views/texts/_form.html.erb
@@ -18,7 +18,7 @@
         <span class="btn btn-success fileinput-button">
           <i class="icon-plus icon-white"></i>
           <span>Add files...</span>
-          <%= f.file_field :pages %>
+          <%= f.file_field :pages, :multiple => true %>
         </span>
         <button type="submit" class="btn btn-primary start">
           <i class="icon-upload icon-white"></i>
@@ -45,7 +45,7 @@
     <div class="fileupload-loading"></div>
     <br>
     <!-- The table listing the files available for upload/download -->
-    <table class="table table-striped"><tbody class="files" data-toggle="modal-gallery" data-target="#modal-gallery"></tbody>
+    <table class="table table-striped"><tbody class="files" data-toggle="modal-gallery" data-target="#modal-gallery"></tbody></table>
 
 
 <% end %>
@@ -128,6 +128,12 @@
         // Initialize the jQuery File Upload widget:
         $('#fileupload').fileupload();
         //
+        $('#fileupload').fileupload( {
+            url: '/pages',
+            singleFileUploads: true
+        });
+
+
         // Load existing files:
         $.getJSON($('#fileupload').prop('action'), function (files) {
             var fu = $('#fileupload').data('blueimpFileupload'),
