--- a/app/views/texts/_form.html.erb
+++ b/app/views/texts/_form.html.erb
@@ -20,7 +20,7 @@
           <span>Add files...</span>
           <%= f.file_field :pages, :label => "pageimages", :multiple => true %>
         </span>
-        <button type="submit" name="submit" class="btn btn-primary start">
+        <button type="submit" id="upload" class="btn btn-primary start">
           <i class="icon-upload icon-white"></i>
           <span>Start upload</span>
         </button>
