--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -6,14 +6,9 @@
 </p>
 
 <p>
-  <strong>Type:</strong>
-  <%= @page.type %>
-</p>
-
-<p>
   <strong>Sort order:</strong>
   <%= @page.sort_order %>
 </p>
 
-<%= link_to 'Edit', edit_page_path(@page) %> |
-<%= link_to 'Back', pages_path %>
+<%= link_to 'Edit', edit_pul_store_page_path(@page) %> |
+<%= link_to 'Back', pul_store_pages_path %>
