--- a/app/views/texts/show.html.erb
+++ b/app/views/texts/show.html.erb
@@ -20,5 +20,5 @@
   <%= @text.toc %>
 </p>
 
-<%= link_to 'Edit', edit_text_path(@text) %> |
-<%= link_to 'Back', texts_path %>
+<%= link_to 'Edit', edit_pul_store_text_path(@text) %> |
+<%= link_to 'Back', pul_store_texts_path %>
