--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @page %> |
-<%= link_to 'Back', pul_store_pages_path %>
+<%= link_to 'Back', pages_path %>
