--- a/app/views/texts/edit.html.erb
+++ b/app/views/texts/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @text %> |
-<%= link_to 'Back', pul_store_texts_path %>
+<%= link_to 'Back', texts_path %>
