--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -10,5 +10,5 @@
   <%= @page.sort_order %>
 </p>
 
-<%= link_to 'Edit', edit_pul_store_page_path(@page) %> |
-<%= link_to 'Back', pul_store_pages_path %>
+<%= link_to 'Edit', edit_page_path(@page) %> |
+<%= link_to 'Back', pages_path %>
