--- a/app/views/pul_store/lae/boxes/show.html.erb
+++ b/app/views/pul_store/lae/boxes/show.html.erb
@@ -4,6 +4,7 @@
   <strong>Barcode:</strong>
   <%= @box.barcode %>
 </p>
-
-<%= link_to 'Edit', edit_lae_box_path(@box) %> |
+<% if can?(:edit, @box) %>
+  <%= link_to 'Edit', edit_lae_box_path(@box) %> |
+<% end %>
 <%= link_to 'Back', lae_box_path %>
