first pass at facets on the boxes page

--- a/app/views/pul_store/lae/boxes/show.html.erb
+++ b/app/views/pul_store/lae/boxes/show.html.erb
@@ -7,4 +7,6 @@
 <% if can?(:edit, @box) %>
   <%= link_to 'Edit', edit_lae_box_path(@box) %> |
 <% end %>
-<%= link_to 'Back', lae_box_path %>
+
+<%= link_to 'Back', lae_boxes_path %>
+
