--- a/app/views/pul_store/lae/boxes/index.html.erb
+++ b/app/views/pul_store/lae/boxes/index.html.erb
@@ -1,33 +1,43 @@
+<div id="sidebar" class="span3">
+ <%= render 'search_sidebar' %>
+</div>
+
+<div id="content" class="span9">
+
 <h1>Listing Boxes</h1>
 
 <%= render 'quick_lookup' %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Barcode</th>
-      <th>PID</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @boxes.each do |box| %>
-      <tr>
-        <td><%= box.barcode %></td>
-        <td><%= box.pid %></td>
-        <td><%= link_to 'Show', box %></td>
-        <% if can?(:edit, box) %>
-          <td><%= link_to 'Edit', edit_lae_box_path(box) %></td>
-          <td><%= link_to 'Destroy', box, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <% end %>
-      </tr>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
 <% if can?(:create, @box) %>
   <%= link_to 'New Box', new_lae_box_path %>
 <% end %>
+
+
+
+  <h2 class="hide-text top-content-title"><%= t('blacklight.search.search_results_header') %></h2>
+
+  <% @page_title = t('blacklight.search.title', :application_name => application_name) %>
+
+
+  <% extra_head_content << render_opensearch_response_metadata.html_safe %>
+
+  <%= render 'constraints' %>
+
+  <%= render 'sort_and_per_page' %>
+
+  <h2 class="hide-text"><%= t('blacklight.search.search_results') %></h2>
+
+  <%- if response_has_no_search_results? %>
+    <%= render "zero_results" %>
+  <%- elsif render_grouped_response? %>
+    <%= render_grouped_document_index %>
+  <%- else %>
+    <%= render_document_index %>
+  <%- end %>
+
+  <%= render 'results_pagination' %>
+
+
+
+</div>
