rudimentary forms for box/folder creation. Templates for 'new' and 'edit' forms

--- a/app/views/pul_store/lae/boxes/edit.html.erb
+++ b/app/views/pul_store/lae/boxes/edit.html.erb
@@ -1,6 +1,14 @@
 <h1>Update Box</h1>
 
-<%= render 'form' %>
+<div id="content" class="span9 show-document">
+  <%= render 'form' %>
+  <%= link_to 'Show', @box %> |
+  <%= link_to 'Back', lae_boxes_path %>
+</div>
+<div id="sidebar" class="span3">
+  <%= render 'box_info' %>
+</div>
 
-<%= link_to 'Show', @box %> |
-<%= link_to 'Back', lae_boxes_path %>
+
+
+
