--- a/app/views/pul_store/lae/boxes/new.html.erb
+++ b/app/views/pul_store/lae/boxes/new.html.erb
@@ -1,5 +1,5 @@
-<h1>Enter a New Box</h1>
+<h1>Enter a New Box Barcode</h1>
 
-<%= render 'form' %>
+<%= render 'brief_form' %>
 
 <%= link_to 'Back', lae_boxes_path %>
