--- a/app/views/pul_store/lae/boxes/_quick_lookup.html.erb
+++ b/app/views/pul_store/lae/boxes/_quick_lookup.html.erb
@@ -1,9 +1,7 @@
-<% #= form_tag("/lae/boxes", method: :get, id: "quick_lookup") do %>
-<form action="<%= lae_boxes_path %>" method="get" id="quick_lookup">
+<%= form_tag("/lae/boxes", method: :get, id: "quick_lookup") do %>
   <%= label_tag(:barcode, "Find a Box by Barcode:") %>
   <%= text_field_tag(:barcode) %>
   <%= submit_tag("Lookup", id: "quick_lookup_submit") %>
-</form>
-<% #end %>
+<% end %>
 
 
