--- a/config/database.yml.tmpl
+++ b/config/database.yml.tmpl
@@ -3,7 +3,7 @@ development:
   collation: utf8_bin
   encoding: utf8
   database: pulstore_dev
-  user: travis
+  username: travis
   password: 
   pool: 5
   timeout: 5000
@@ -18,7 +18,7 @@ test:
   encoding: utf8
   database: pulstore_test
   pool: 5
-  user: travis
+  username: travis
   password: 
   timeout: 5000
   host: localhost
@@ -29,7 +29,7 @@ production:
   encoding: utf8
   database: pulstore_prod
   pool: 5
-  user: root
+  username: root
   password: 
   timeout: 5000
   host: localhost
