--- a/app/views/shared/lae/_header_navbar.html.erb
+++ b/app/views/shared/lae/_header_navbar.html.erb
@@ -7,10 +7,10 @@
                       <span class="icon-bar"></span>
                       <span class="icon-bar"></span>
                     </a>
-<div class="span3">
-                    <%= link_to application_name, root_path, :class => "brand" %>
+                  <div class="span4">
+                    <%= link_to application_name, root_path, class: "brand" %>
                   </div>
-                  <div class="span6 clearfix" id="searchbar">         
+                  <div class="span5 clearfix" id="searchbar">         
                       <%= render 'quick_lookup' %>
                       
                   </div>
