various erb template changes for first pass at editing

--- a/app/views/pul_store/lae/boxes/_brief_form.erb
+++ b/app/views/pul_store/lae/boxes/_brief_form.erb
@@ -11,7 +11,7 @@
   <% end %>
 
   <div class="field">
-    <%= b.label :barcode %><br>
+    <%= b.label "Scan a #{:barcode}" %><br>
     <%= b.text_field :barcode %>
   </div>
 
