--- a/app/views/pul_store/lae/folders/_ajax_form.erb
+++ b/app/views/pul_store/lae/folders/_ajax_form.erb
@@ -1,4 +1,5 @@
-<%= form_for(@folder) do |f| %>
+<% @folder = PulStore::Lae::Folder.new %>
+<%= form_for(@folder, remote: true ) do |f| %>
   <% if @folder.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@folder.errors.count, "error") %> prohibited this Folder from being saved:</h2>
@@ -9,7 +10,6 @@
       </ul>
     </div>
   <% end %>
-
   <div class="field">
     <%= f.label :barcode %><br>
     <%= f.text_field :barcode %>
@@ -26,6 +26,8 @@
         <%= f.text_field e %>
       </div>
     <% end %>
+
+    <%= f.hidden_field :box_id, :class => "field", :value => box.id %>
 
    <div class="actions">
       <%= f.submit %>
