--- a/app/views/pul_store/lae/boxes/_box_info.erb
+++ b/app/views/pul_store/lae/boxes/_box_info.erb
@@ -1,3 +1,3 @@
 <h3>Box Information</h3>
-<%= @box.id %>
-<%= @box.workflow_state %>
+ID: <%= @box.id %><br/>
+Workflow State <%= @box.workflow_state %>
