--- a/app/views/shared/lae/_header_navbar.html.erb
+++ b/app/views/shared/lae/_header_navbar.html.erb
@@ -11,7 +11,7 @@
                     <%= link_to application_name, root_path, class: "lae-brand" %>
                   </div>
                   <div class="span5 clearfix" id="searchbar">         
-                      <%= render 'quick_lookup' %>
+                      <%= render 'shared/lae/quick_lookup' %>
                       
                   </div>
 
