add references hydra-editor assets

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,5 +11,6 @@
  *= require_self
  *= require jquery.fileupload-ui
  *= require jquery.ui.all
+ *= require hydra-editor/hydra-editor
  *= require_tree .
  */
