--- a/app/views/pul_store/lae/folders/_ajax_form.erb
+++ b/app/views/pul_store/lae/folders/_ajax_form.erb
@@ -1,4 +1,5 @@
 <% @folder = PulStore::Lae::Folder.new %>
+<div class="well">
 <%= form_for(@folder, remote: true ) do |f| %>
   <% if @folder.errors.any? %>
     <div id="error_explanation">
@@ -16,7 +17,7 @@
   </div>
   <div class="field">
     <%= f.label :genre %><br>
-    <%= f.text_field :genre %>
+    <%= f.select(:genre, options_for_select(list_all_genres_as_select_list)) %>
   </div>
   <div id="extent-metadata">
     <!-- required metadata goes here -->
@@ -33,3 +34,4 @@
       <%= f.submit %>
    </div>
 <% end %>
+</div>
