Add helper to for lae rights, base_helpers class for shared pul_store helpers, add base workflow state map bootstrap badge/label coloring helper, add rights hidden field to new folder form, add textarea to full form

--- a/app/views/pul_store/lae/folders/_ajax_form.erb
+++ b/app/views/pul_store/lae/folders/_ajax_form.erb
@@ -28,6 +28,7 @@
       </div>
     <% end %>
 
+    <%= f.hidden_field :rights, :class => "field", :value => lae_default_folder_rights %>
     <%= f.hidden_field :box_id, :class => "field", :value => box.id %>
 
    <div class="actions">
