--- a/app/views/pul_store/lae/folders/_form.html.erb
+++ b/app/views/pul_store/lae/folders/_form.html.erb
@@ -18,66 +18,66 @@
     <%= b.label :error_note %><br>
     <%= b.text_area :error_note %>
   </div>
+  <div class="field">
+    <%= b.label :rights %><br>
+    <%= b.text_area :rights, value: @folder.rights %><br>
+  </div>
   <div id="desc-metadata">
     <!-- required metadata goes here -->
-    <% PulStore::Lae::Folder::required_elements.each do |e| %>
-      <% unless e == :date_created || e == :subject || e == :geographic || e == :title || e == :language || e == :barcode %>
-      <div class="field">
-        <%= b.label e %><br/>
-        <%= b.text_field e %>
-      </div>
-      <% end %>
-    <% end %>
+    <div class="field">
+      <%= b.label :genre %><br>
+      <%= b.select(:genre, options_for_select(list_all_genres_as_select_list, [@folder.genre])) %>
+    </div>
     <!-- subjects -->
     <%= b.label :subject, "Subjects" %>
     <% if @folder.subject.empty? %>
       <div class="field">
-        <%= text_field_tag "folder[subject][]", nil %>
+        <%= b.text_field :subject %>
       </div>
     <% end %>
 
-    <% @folder.subject.each do |subject| %>
+    <% @folder.subject.to_ary.each_with_index do |subject, index| %>
       <div class="field">
-        <%= text_field_tag "folder[subject][]", subject %>
+        <%= b.text_field "lae_folder[subject][]", value: subject %>
       </div>
     <% end %>
     <!-- Geographic -->
     <%= b.label :geographic, "Geographic" %>
     <% if @folder.geographic.empty? %>
       <div class="field">
-        <%= text_field_tag "folder[geographic][]", nil %>
+        <%= b.text_field :geographic %>
       </div>
     <% end %>
 
-    <% @folder.geographic.each do |value| %>
+    <% @folder.geographic.to_ary.each_with_index do |geographic, index| %>
       <div class="field">
-        <%= text_field_tag "folder[geographic][]", value %>
+        <%= b.text_field "lae_folder[geographic][]", value: geographic %>
       </div>
     <% end %>
     <!-- language -->
     <%= b.label :language, "Language" %>
     <% if @folder.language.empty? %>
       <div class="field">
-        <%= text_field_tag "folder[language][]", nil %>
+        <%= b.text_field :language %>
       </div>
     <% end %>
 
-    <% @folder.language.each do |subject| %>
+    <% @folder.language.each do |lang| %>
       <div class="field">
-        <%= text_field_tag "folder[language][]", subject %>
+        <%= b.text_field "language[]", value: lang %>
       </div>
     <% end %>
     <!-- Title -->
     <%= b.label :title, "title" %>
     <% if @folder.title.empty? %>
       <div class="field">
-        <%= text_field_tag "folder[title][]", nil %>
+        <%= b.text_field :title %>
       </div>
     <% end %>
 
-    <% @folder.title.each do |subject| %>
+    <% @folder.title.each do |title| %>
       <div class="field">
-        <%= text_field_tag "folder[title][]", subject %>
+        <%= b.text_field "title[]", value: title %>
       </div>
     <% end %>
     <!-- end mult-value -->
