--- a/app/views/pul_store/lae/boxes/edit.html.erb
+++ b/app/views/pul_store/lae/boxes/edit.html.erb
@@ -1,6 +1,25 @@
 <h1>Update Box</h1>
 
+
 <div id="content" class="span9 show-document">
+  <!-- start modal -->
+   <div class="form-control">
+    <%= link_to("Add Folder to Box", '#', 'data-target' => "#new-folder-modal", 'data-toggle' => 'modal', :class => "btn btn-primary new-model", :title => "Add a New Folder to Box") %>
+  </div>
+      <div id="new-folder-modal" class="modal fade" data-backdrop="static">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          <h3>Add a Folder<%= " to #{ @box.id }" unless @box.barcode.nil? %></h3>
+        </div>
+        <div class="modal-body">
+          <%= render :partial => 'pul_store/lae/folders/ajax_form', locals: { box: @box } %>
+        </div>
+        <div class="modal-footer">
+          <button id="cancelButton" type="button" class="btn btn-inverse" data-dismiss="modal" aria-hidden="true" title="Close this screen without adding this Folder.">Cancel</button>
+        </div>
+      </div>
+    </div>
+  <!-- end Modal -->
   <%= render 'form' %>
   <%= link_to 'Show', @box %> |
   <%= link_to 'Back', lae_boxes_path %>
