--- a/app/assets/stylesheets/box.css.scss
+++ b/app/assets/stylesheets/box.css.scss
@@ -3,3 +3,4 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 //
 a.new-model:visited { color: #fff; }
+#folders-table input { width: auto; }
