--- a/app/views/pul_store/lae/folders/edit.html.erb
+++ b/app/views/pul_store/lae/folders/edit.html.erb
@@ -3,4 +3,7 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @folder %> |
-<%= link_to 'Back', lae_folders_path %>
+<% if(!@folder.box_id.blank?) %>
+  <%= link_to 'Return to Box', edit_lae_box_path(@folder.box_id) %> |
+<% end %>
+<%= link_to 'Back to Folders', lae_folders_path %>
