--- a/app/views/pul_store/lae/folders/new.html.erb
+++ b/app/views/pul_store/lae/folders/new.html.erb
@@ -1,5 +1,5 @@
 <h1>Enter a New Folder</h1>
 
-<%= render 'brief_form' %>
+<%= render 'pul_store/lae/folders/brief_form' %>
 
 <%= link_to 'Back', lae_folders_path %>
