alpha pass at folder edting on box model

--- a/app/views/pul_store/lae/boxes/_form.html.erb
+++ b/app/views/pul_store/lae/boxes/_form.html.erb
@@ -17,19 +17,40 @@
 :barcode,
 :error_note -->
   <%= render :partial => 'shared/lae/workflow_state', locals: {object: @box} %>
-
-  <div class="field">
-    <%= b.label :barcode %><br>
-    <%= b.text_field :barcode %>
+  <div class="control-group">
+    <%= b.label :barcode, :class => 'control-label' %>
+    <div class="controls">
+      <%= b.text_field :barcode %>
+    </div>
   </div>
-  <div class="field">
-    <%= b.label :error_note %><br>
-    <%= b.text_area :error_note %>
+  <div class="control-group">
+    <%= b.label :error_note, :class => 'control-label' %>
+    <div class="controls">
+      <%= b.text_area :error_note %>
+    </div>
   </div>
-  <div class="field">
-    <%= check_box_tag(:full) %>
-    <%= label_tag(:full, "Full Box") %>
-  <div>
+  <div class="control-group">
+    <%= b.label :shipped_date, :class => 'control-label' %>
+    <div class="controls">
+      <%= b.text_field :shipped_date, :class => 'datepicker' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= b.label :received_date, :class => 'control-label' %>
+    <div class="controls">
+      <%= b.text_field :received_date, :class => 'datepicker' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <div class="controls">
+      <%= b.label :full, "Full Box" %>
+      <%= b.check_box :full, { class: 'checkbox' }, "true", "false" %>
+    </div>
+  </div>
+  <div class="control-group actions">
+    <%= b.submit :value => "Update Box", :class => 'btn btn-primary' %>
+  </div>
+<% end %>
 
   <% if(@box.folders.empty?) %>
     <h3>Create a Folder</h3>
@@ -45,34 +66,31 @@
         <th>Width</th>
         <th>Height</th>
         <th>Pages</th>
+        <th>Created</th>
         <th>Options</th>
       </tr>
     </thead>
     <tbody>
-    <% folder_index = 0 %>
-    <%= b.fields_for :folders do |folders_form| %>
+    <% @box.folders.sort_by {|f1| f1.date_uploaded }.each do |f| %>
       <tr>
-        <td><%= folders_form.text_field :barcode %></td>
-        <td><%= folders_form.text_field :genre %></td>
-        <td><%= folders_form.text_field :width_in_cm, :size => 5 %></td>
-        <td><%= folders_form.text_field :height_in_cm, :size => 5 %></td>
-        <td><%= folders_form.text_field :page_count, :size => 5 %></td>
+        <td><%= f.barcode %></td>
+        <td><%= f.genre %></td>
+        <td><%= f.width_in_cm %></td>
+        <td><%= f.height_in_cm %></td>
+        <td><%= f.page_count %></td>
+        <td><%= lae_folder_date_uploaded(f.date_uploaded) %></td>
         <td>
           <% if(@box.folders.size > 0) %>
             <% if can?(:edit, @box) %>
-              <%= link_to "Edit Folder", edit_lae_folder_path(@box.folders[folder_index].id) %>
+              <%= link_to "Edit Folder", edit_lae_folder_path(f.id), :class => "btn btn-info" %>
             <% end %>
           <% end %>
         </td>
-        <% folder_index = folder_index + 1 %>
       </tr>
   <% end %>
   </tbody>
   </table>
-  <div class="actions">
-    <%= b.submit %>
-  </div>
-<% end %>
+
 
 
 
