--- a/app/views/pul_store/lae/folders/_brief_form.erb
+++ b/app/views/pul_store/lae/folders/_brief_form.erb
@@ -28,6 +28,6 @@
     <% end %>
 
    <div class="actions">
-      <%= f.submit %>
+      <%= f.submit :value => "Create Folder", :class => 'btn btn-primary' %>
    </div>
 <% end %>
