--- a/app/views/pul_store/lae/folders/show.html.erb
+++ b/app/views/pul_store/lae/folders/show.html.erb
@@ -1,5 +1,21 @@
 <p id="notice"><%= notice %></p>
 
+
+<h1 class="folder-title lae-head">
+  <% if !@folder.title.empty? %>
+    <%= @folder.title %>
+  <% else %>
+    [Not Yet Titled]
+  <% end %>
+</h1>
+
+<div class="btn-group">
+  <%= link_to 'Edit This Folder', edit_lae_folder_path(@folder), class: "btn btn-success" %> |
+  <% if(!@folder.box_id.blank?) %>
+    <%= link_to 'Return to Box', edit_lae_box_path(@folder.box_id), class: "btn btn-success" %>
+  <% end %>
+</div>
+
 <% if(!@folder.box_id.blank?) %>
 <p>
   <strong>Part Of Box:</strong>
@@ -13,7 +29,10 @@
 
 <%= render :partial => 'shared/lae/workflow_state', locals: {object: @folder} %>
 
-<%= link_to 'Edit Folder', edit_lae_folder_path(@folder) %> |
-<% if(!@folder.box_id.blank?) %>
-  <%= link_to 'Return to Box', edit_lae_box_path(@folder.box_id) %>
-<% end %>
+<% if !@folder.title.empty? %>
+      <div class="field">
+        <%= @folder.title %>
+      </div>
+    <% end %>
+
+
